# ccs-v1

./: .env.example  .gitignore  API_QUICK_REFERENCE.md  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  setup.sh  test_api.sh
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs
backend/src/handlers/: agent.rs  auth.rs  content.rs  image.rs  mod.rs  page.rs  search.rs
backend/src/models/: agent.rs  content.rs  mod.rs  page.rs
data/db/: database.db  database.db-shm  database.db-wal
frontend/: Dockerfile  README.md  index.html  nginx.conf
frontend/src/: App.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AgentSupportList.tsx  DetailForm.tsx  Login.tsx  PageForm.tsx  PagesList.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
